<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="6dp"
            android:paddingEnd="16dp"
            android:saveEnabled="false"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_close_black_24dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/configDialog"
        android:layout_width="match_parent"
        android:layout_height="851dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:scrollbars="vertical"
        android:weightSum="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/keg_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kegscales_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/keg_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/keg_name"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keg_name_label" />

        <Button
            android:id="@+id/update_name"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updatename"
            app:layout_constraintStart_toEndOf="@+id/keg_name"
            app:layout_constraintTop_toBottomOf="@+id/keg_name_label" />

        <TextView
            android:id="@+id/keg_volume_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keg_name" />

        <EditText
            android:id="@+id/keg_volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight=".70"
            android:ems="10"
            android:hint="@string/volume_hint"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@+id/keg_volume_label"
            app:layout_constraintTop_toBottomOf="@+id/keg_volume_label" />

        <Button
            android:id="@+id/update_volume"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".30"
            android:text="@string/updatevolume"
            app:layout_constraintStart_toEndOf="@+id/keg_volume"
            app:layout_constraintTop_toBottomOf="@+id/keg_volume_label" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/instructions_text"
            app:layout_constraintStart_toStartOf="@+id/config_update"
            app:layout_constraintTop_toBottomOf="@+id/keg_volume" />

        <Button
            android:id="@+id/config_update"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/config_update_button_text"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions" />

        <Button
            android:id="@+id/left"
            android:layout_width="86dp"
            android:layout_height="118dp"
            android:text="Swap Left"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintEnd_toStartOf="@+id/right"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/right"
            android:layout_width="86dp"
            android:layout_height="118dp"
            android:text="Swap Right"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>